crates/service/tests/completion/snapshots/features__completion__elem__declare_incomplete.snap
---
source: crates/service/tests/completion/elem.rs
expression: response
---
[
  {
    "label": "anyref",
    "kind": 7
  },
  {
    "label": "eqref",
    "kind": 7
  },
  {
    "label": "i31ref",
    "kind": 7
  },
  {
    "label": "structref",
    "kind": 7
  },
  {
    "label": "arrayref",
    "kind": 7
  },
  {
    "label": "nullref",
    "kind": 7
  },
  {
    "label": "funcref",
    "kind": 7
  },
  {
    "label": "nullfuncref",
    "kind": 7
  },
  {
    "label": "exnref",
    "kind": 7
  },
  {
    "label": "nullexnref",
    "kind": 7
  },
  {
    "label": "externref",
    "kind": 7
  },
  {
    "label": "nullexternref",
    "kind": 7
  },
  {
    "label": "func",
    "kind": 14
  },
  {
    "label": "declare",
    "kind": 14
  }
]
