crates/service/tests/completion/snapshots/features__completion__elem__deprecated.snap
---
source: crates/service/tests/completion/elem.rs
expression: response
---
[
  {
    "label": "$e",
    "labelDetails": {
      "detail": "(elem $e)"
    },
    "kind": 6,
    "tags": [
      1
    ]
  }
]
