crates/service/tests/completion/snapshots/features__completion__elem__elem_idx.snap
---
source: crates/service/tests/completion/elem.rs
expression: response
---
[
  {
    "label": "$e",
    "labelDetails": {
      "detail": "(elem $e)"
    },
    "kind": 6
  },
  {
    "label": "1",
    "labelDetails": {
      "detail": "(elem)"
    },
    "kind": 6
  }
]
