crates/service/tests/completion/snapshots/features__completion__elem__func_idx.snap
---
source: crates/service/tests/completion/elem.rs
expression: response
---
[
  {
    "label": "$f",
    "kind": 3,
    "documentation": {
      "kind": "markdown",
      "value": "```wat\n(func $f)\n```"
    }
  }
]
