crates/service/tests/completion/snapshots/features__completion__elem__func_idxes.snap
---
source: crates/service/tests/completion/elem.rs
expression: response
---
[
  {
    "label": "$f",
    "labelDetails": {
      "description": "[] -> []"
    },
    "kind": 3,
    "detail": "(func $f)",
    "documentation": {
      "kind": "markdown",
      "value": ""
    }
  }
]
